# ps-drone

./: pyproject.toml
ps_drone/: __init__.py  ps_drone.py  ps_drone3.py
tools/: batPrepare.py
tutorials/: firstConfig.py  firstNavData.py  firstTagDetection.py  firstTry.py  firstVideo.py  getNavData.py  glideNstop.py  moveTurn.py  multiConfig.py
